1. sending room/buildingFloor/building changes 2.removed building floor from mappedpoi 3.removed ordinal from scenarioToTrigger