@@ -10,19 +10,19 @@ import java.util.Arrays;
 import java.util.List;
 
 public enum FilterComponentType {
-    COUNTRY(Country.class, Arrays.asList(MappedPOI_.address, Address_.street, Street_.city, City_.country)),
-    CITY(City.class, Arrays.asList(MappedPOI_.address, Address_.street, Street_.city)),
-    STREET(Street.class, Arrays.asList(MappedPOI_.address, Address_.street)),
-    NEIGHBOURHOOD(Neighbourhood.class, Arrays.asList(MappedPOI_.address, Address_.neighbourhood)),
-    STATE(State.class, Arrays.asList(MappedPOI_.address, Address_.street, Street_.city, City_.state)),
-    MAP_ICON(MapIcon.class, Arrays.asList(MappedPOI_.mapIcon)),
-    MAP_GROUPS(MapGroup.class, Arrays.asList(MappedPOI_.mapGroupToMappedPOIS, MapGroupToMappedPOI_.mapGroup)),
-    TENANTS(SecurityTenant.class, Arrays.asList(MappedPOI_.security, Baseclass_.tenant)),
-    ROOM(Room.class, Arrays.asList(MappedPOI_.room)),
-    RELATED_TYPE(String.class, Arrays.asList(MappedPOI_.relatedType)),
-    EXTERNAL_ID(String.class, Arrays.asList(MappedPOI_.externalId)),
-    LAYER(Layer.class,Arrays.asList(MappedPOI_.layer)),
-    BUILDING_FLOOR(BuildingFloor.class,Arrays.asList(MappedPOI_.buildingFloor));
+    COUNTRY(Country.class, List.of(MappedPOI_.address, Address_.street, Street_.city, City_.country)),
+    CITY(City.class, List.of(MappedPOI_.address, Address_.street, Street_.city)),
+    STREET(Street.class, List.of(MappedPOI_.address, Address_.street)),
+    NEIGHBOURHOOD(Neighbourhood.class, List.of(MappedPOI_.address, Address_.neighbourhood)),
+    STATE(State.class, List.of(MappedPOI_.address, Address_.street, Street_.city, City_.state)),
+    MAP_ICON(MapIcon.class, List.of(MappedPOI_.mapIcon)),
+    MAP_GROUPS(MapGroup.class, List.of(MappedPOI_.mapGroupToMappedPOIS, MapGroupToMappedPOI_.mapGroup)),
+    TENANTS(SecurityTenant.class, List.of(MappedPOI_.security, Baseclass_.tenant)),
+    ROOM(Room.class, List.of(MappedPOI_.room)),
+    RELATED_TYPE(String.class, List.of(MappedPOI_.relatedType)),
+    EXTERNAL_ID(String.class, List.of(MappedPOI_.externalId)),
+    LAYER(Layer.class,List.of(MappedPOI_.layer)),
+    BUILDING_FLOOR(BuildingFloor.class,List.of(MappedPOI_.room,Room_.buildingFloor));
 
     private final Class<?> entity;
     private final List<Attribute> attributes;
